Add Class "DataReplace".
Add class and rewrite main program.

--- a/TextChanger/TextChanger.csproj
+++ b/TextChanger/TextChanger.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataReplace.cs" />
     <Compile Include="Tch.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
